// Copyright 2018 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package internal.cursors;

option go_package = "internal";


// InvocationsCursor is used to paginate results of GetInvocations RPC call.
//
// It is serialized in base64 and sent to the clients. There's no integrity
// protection: we assume broken cursors are rejected down the call stack
// (which is the case with the datastore cursors).
//
// The internal structure of the cursor is implementation detail and clients
// must not depend on it.
message InvocationsCursor {
  bytes ds_cursor = 1;  // the raw datastore cursor as byte blob
}
